# etl-with-duckdb-python

./: .gitignore  README.md  app.py  dockerfile  duckdb.db  etl_pipeline.py  pipeline.py  pyproject.toml  requirements.txt
gdown-folder/: sales_05_01_2024.csv  sales_06_01_2024.csv  sales_07_01_2024.json
