[tool.poetry]
name = "etl-with-duckdb-python"
version = "0.1.0"
description = ""
authors = ["DellaCortef <felipe.dellacorte@outlook.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
streamlit = "^1.40.2"
gdown = "^5.2.0"
duckdb = "^1.1.3"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.0.1"
psycopg = "^3.2.3"
sqlalchemy = "^2.0.36"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
